--- a/src/template/MomohaFeed/subscription_add.tmpl
+++ b/src/template/MomohaFeed/subscription_add.tmpl
@@ -7,7 +7,7 @@
 {% block main %}
 <h1>Add subscription</h1>
 
-<form action="{% url 'MomohaFeed.views.subscriptionAdd' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
+<form action="{% url 'MomohaFeed.views.subscription_add' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Add" />
 </form>
