--- a/src/template/MomohaFeed/subscription_list_content.tmpl
+++ b/src/template/MomohaFeed/subscription_list_content.tmpl
@@ -9,8 +9,15 @@
 
 <div class="row">
 <table class="span12" border="1">
+	<tr>
+		<th>Title</th>
+		<th>date</th>
+	</tr>
 	{% for db_item in db_item_list %}
-		<tr><td><a href="{% url 'MomohaFeed.views.subscription_item_show' subscription_id=db_subscription.id item_id=db_item.id %}">{{ db_item.title }}</a></td></tr>
+		<tr>
+			<td><a href="{% url 'MomohaFeed.views.subscription_item_show' subscription_id=db_subscription.id item_id=db_item.id %}">{{ db_item.title }}</a></td>
+			<td>{{ db_item.published }}</td>
+		</tr>
 	{% endfor %}
 </table>
 </div>
