--- a/src/template/MomohaFeed/list_subscription.tmpl
+++ b/src/template/MomohaFeed/list_subscription.tmpl
@@ -8,6 +8,10 @@
 <h1>Subscription list</h1>
 
 <div class="row">
+<form action="{% url 'MomohaFeed.views.subscription_add' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
+{{ add_form.as_p }}
+<input type="submit" value="Add" />
+</form>
 <table class="span12" border="1">
 	<tr>
 		<th>Title</th>
