--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -16,10 +16,10 @@
 <div id="header">
 </div>
 
-<div id="menu">
+<div id="subscription_list_area">
 </div>
 
-<div id="content">
+<div id="subscription_area">
 </div>
 
 </body>
