--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -17,9 +17,13 @@
 </div>
 
 <div id="subscription_list_area">
+	<div id="subscription_list_menu"></div>
+	<div id="subscription_list_main"></div>
 </div>
 
 <div id="subscription_area">
+	<div id="subscription_menu"></div>
+	<div id="subscription_main"></div>
 </div>
 
 </body>
