--- a/src/static/feed/root_layout.css
+++ b/src/static/feed/root_layout.css
@@ -1,26 +1,51 @@
+div#header,
+div#subscription_list_area,
+div#subscription_list_menu,
+div#subscription_list_main,
+div#subscription_area,
+div#subscription_menu,
+div#subscription_main {
+	position: absolute;
+	margin: 0; padding: 0;
+}
+
+/* /////////////////// */
+
 body {
 	margin: 0;
 	padding: 0;
 }
 
-div#header,
-div#subscription_list_area,
-div#content {
-	position: absolute;
-	margin: 0; padding: 0;
-}
 
 div#header {
 	background-color: #222222;
 	overflow: hidden;
 }
 
+
 div#subscription_list_area {
+	overflow: hidden;
 	background-color: #EEEEEE;
-	overflow: auto;
 }
 
+	div#subscription_list_menu {
+		overflow: hidden;
+	}
+	
+	div#subscription_list_main {
+		overflow: auto;
+	}
+
+
 div#subscription_area {
-	background-color: #FFFFFF;
 	overflow: auto;
+	background-color: #FFFFFF;
 }
+
+	div#subscription_menu {
+		overflow: hidden;
+	}
+	
+	div#subscription_main {
+		overflow: auto;
+	}
