--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -4,26 +4,36 @@
 
 <head>
     <title>MomohaFeed</title>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/static/feed/root_layout.css" />
 </head>
 
 <body>
 
 <script src="/static/jquery/jquery-1.9.1.js"></script>
+<script src="/static/bootstrap/js/bootstrap.js"></script>
 <script src="/static/feed/root_layout.js"></script>
+<script src="/static/feed/add_subscription.js"></script>
 <script src="/static/feed/main.js"></script>
 
 <div id="header">
 </div>
 
 <div id="subscription_list_area">
-	<div id="subscription_list_menu"></div>
+	<div id="subscription_list_menu">
+		<div class="menu_padding">
+			<a href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i>Add</a>
+		</div>
+	</div>
 	<div id="subscription_list_main"></div>
 </div>
 
 <div id="subscription_area">
 	<div id="subscription_menu"></div>
 	<div id="subscription_main"></div>
+</div>
+
+<div id="import">
 </div>
 
 </body>
