--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -12,6 +12,8 @@
 
 <script src="/static/jquery/jquery-1.9.1.js"></script>
 <script src="/static/bootstrap/js/bootstrap.js"></script>
+<script src="/static/cookie/jquery.cookie.js"></script>
+<script src="/static/json/json2.js"></script>
 <script src="/static/feed/root_layout.js"></script>
 <script src="/static/feed/add_subscription.js"></script>
 <script src="/static/feed/main.js"></script>
@@ -22,7 +24,7 @@
 <div id="subscription_list_area">
 	<div id="subscription_list_menu">
 		<div class="menu_padding">
-			<a href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i>Add</a>
+			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i>Add</a>
 		</div>
 	</div>
 	<div id="subscription_list_main"></div>
