--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -17,6 +17,7 @@
 <script src="/static/feed/root_layout.js"></script>
 <script src="/static/feed/add_subscription.js"></script>
 <script src="/static/feed/subscription_list.js"></script>
+<script src="/static/feed/subscription.js"></script>
 <script src="/static/feed/main.js"></script>
 
 <div id="header">
@@ -29,14 +30,15 @@
 		</div>
 	</div>
 	<div id="subscription_list_main">
-		<ul id="subscription_list_ul" class="nav nav-list">
-		</ul>
+		<ul id="subscription_list_ul" class="nav nav-list"></ul>
 	</div>
 </div>
 
 <div id="subscription_area">
 	<div id="subscription_menu"></div>
-	<div id="subscription_main"></div>
+	<div id="subscription_main">
+		<table id="subscription_list_item_table" class="table"></table>
+	</div>
 </div>
 
 <div id="import">
