beautfy top bar

--- a/src/static/feed/root_layout.css
+++ b/src/static/feed/root_layout.css
@@ -22,6 +22,10 @@ div#header {
 	overflow: hidden;
 }
 
+	div#header a.brand {
+		margin-left: 0;
+	}
+
 
 div#subscription_list_area {
 	overflow: hidden;
