--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -20,7 +20,10 @@
 <script src="/static/feed/subscription.js"></script>
 <script src="/static/feed/main.js"></script>
 
-<div id="header">
+<div id="header" class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+	<a class="brand" href="#">MomohaFeed</a>
+  </div>
 </div>
 
 <div id="subscription_list_area">
