--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -16,7 +16,7 @@
 <script src="/static/json/json2.js"></script>
 <script src="/static/feed/root_layout.js"></script>
 <script src="/static/feed/add_subscription.js"></script>
-<script src="/static/feed/subscription_list.js"></script>
+<script src="/static/feed/list_subscription.js"></script>
 <script src="/static/feed/subscription.js"></script>
 <script src="/static/feed/main.js"></script>
 
@@ -26,14 +26,14 @@
   </div>
 </div>
 
-<div id="subscription_list_area">
-	<div id="subscription_list_menu">
+<div id="list_subscription_area">
+	<div id="list_subscription_menu">
 		<div class="menu_padding">
 			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i>Add</a>
 		</div>
 	</div>
-	<div id="subscription_list_main">
-		<ul id="subscription_list_ul" class="nav nav-list"></ul>
+	<div id="list_subscription_main">
+		<ul id="list_subscription_ul" class="nav nav-list"></ul>
 	</div>
 </div>
 
