show subscription after add

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -14,6 +14,7 @@
 <script src="/static/bootstrap/js/bootstrap.js"></script>
 <script src="/static/cookie/jquery.cookie.js"></script>
 <script src="/static/json/json2.js"></script>
+<script src="/static/feed/utils.js"></script>
 <script src="/static/feed/root_layout.js"></script>
 <script src="/static/feed/add_subscription.js"></script>
 <script src="/static/feed/list_subscription.js"></script>
