--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -39,7 +39,11 @@
 </div>
 
 <div id="subscription_area">
-	<div id="subscription_menu"></div>
+	<div id="subscription_menu">
+		<div class="menu_padding">
+			<a id="subscription_poll_btn" href="#subscription_poll" role="button" class="btn"><i class="icon-refresh"></i>Poll</a>
+		</div>
+	</div>
 	<div id="subscription_main">
 		<table id="subscription_list_item_table" class="table"></table>
 	</div>
