--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -6,6 +6,7 @@
     <title>MomohaFeed</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/static/feed/root_layout.css" />
+    <link rel="stylesheet" href="/static/feed/subscription.css" />
 </head>
 
 <body>
@@ -19,6 +20,7 @@
 <script src="/static/feed/add_subscription.js"></script>
 <script src="/static/feed/list_subscription.js"></script>
 <script src="/static/feed/subscription.js"></script>
+<script src="/static/feed/share.js"></script>
 <script src="/static/feed/main.js"></script>
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
