--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -21,6 +21,7 @@
 <script src="/static/feed/list_subscription.js"></script>
 <script src="/static/feed/subscription.js"></script>
 <script src="/static/feed/share.js"></script>
+<script src="/feed/cmd.js"></script>
 <script src="/static/feed/main.js"></script>
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
