#issue 19, web add all read done btn

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -45,6 +45,7 @@
 	<div id="subscription_menu">
 		<div class="menu_padding">
 			<a id="subscription_poll_btn" href="#subscription_poll" role="button" class="btn"><i class="icon-refresh"></i>Poll</a>
+			<a id="subscription_all_readdone_btn" href="#subscription_all_readdone" role="button" class="btn"><i class="icon-check"></i>All read</a>
 		</div>
 	</div>
 	<div id="subscription_main">
