--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -44,8 +44,10 @@
 <div id="subscription_area">
 	<div id="subscription_menu">
 		<div class="menu_padding">
-			<a id="subscription_poll_btn" href="#subscription_poll" role="button" class="btn"><i class="icon-refresh"></i>Poll</a>
-			<a id="subscription_all_readdone_btn" href="#subscription_all_readdone" role="button" class="btn"><i class="icon-check"></i>All read</a>
+			<div class="btn-group">
+				<button id="subscription_poll_btn" class="btn"><i class="icon-refresh"></i>Poll</button>
+				<button id="subscription_all_readdone_btn" class="btn"><i class="icon-check"></i>All read</button>
+			</div>
 		</div>
 	</div>
 	<div id="subscription_main">
