add filter btn to UI #25

--- a/src/static/feed/subscription.css
+++ b/src/static/feed/subscription.css
@@ -6,3 +6,8 @@ img.subscription_share_btn {
 .subscription_readdone {
 	background-color: #EEEEEE;
 }
+
+#subscription_menu_toolbar{
+	margin: 0px;
+	padding: 0px;
+}
