"add subscription" wait #26

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/static/feed/root_layout.css" />
     <link rel="stylesheet" href="/static/feed/subscription.css" />
+    <link rel="stylesheet" href="/static/feed/add_subscription.css" />
 </head>
 
 <body>
