subscription wait bar #27

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -64,6 +64,9 @@
 	</div>
 	<div id="subscription_main">
 		<table id="subscription_list_item_table" class="table"></table>
+		<div id="subscription_progress" class="progress progress-striped active">
+			<div id="subscription_progress_bar" class="bar"></div>
+		</div>
 	</div>
 </div>
 
