--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -42,7 +42,7 @@
 	</div>
 </div>
 
-<div id="subscription_area">
+<div id="subscription_area" class="mainarea">
 	<div id="subscription_menu">
 		<div class="menu_padding">
 			<div id="subscription_menu_toolbar" class="btn-toolbar">
