--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -59,6 +59,14 @@
 						<li><a href="#" id="subscription_filter_shownew_btn"><i class="icon-filter"></i> Show NEW</a></li>
 					</ul>
 				</div>
+				<div class="btn-group pull-right">
+					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+						<i class="icon-cog"></i> <span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a href="#subscription_rm_modal" id="subscription_show_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Unsubscribe</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
