change show-new icon to icon-asterisk

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -56,7 +56,7 @@
 					</a>
 					<ul class="dropdown-menu">
 						<li><a href="#" id="subscription_filter_showall_btn"><i class="icon-list-alt"></i> Show ALL</a></li>
-						<li><a href="#" id="subscription_filter_shownew_btn"><i class="icon-filter"></i> Show NEW</a></li>
+						<li><a href="#" id="subscription_filter_shownew_btn"><i class="icon-asterisk"></i> Show NEW</a></li>
 					</ul>
 				</div>
 				<div class="btn-group pull-right">
