--- a/src/static/feed/subscription.css
+++ b/src/static/feed/subscription.css
@@ -20,3 +20,22 @@ img.subscription_share_btn {
 	margin-bottom: 0px;
 	margin-top: 10px;
 }
+
+#subscription_main_title .sub {
+	margin-right: 10px;
+	margin-top: 24px;
+	color: #b2b2b2;
+	font-size: 14px;
+	font-weight: lighter;
+	float: right;
+	line-height: 14px;
+}
+
+.link_icon {
+	opacity: 0.382;
+	cursor: pointer;
+}
+
+.link_icon:hover {
+	opacity: 1;
+}
