--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -71,6 +71,7 @@
 		</div>
 	</div>
 	<div id="subscription_main">
+		<h1 id="subscription_main_title"><a id="subscription_main_title_link" href="#"></a><div class="sub"><span id="subscription_main_title_sub"></span> <i class="icon-chevron-right link_icon"></i></div></h1>
 		<table id="subscription_list_item_table" class="table"></table>
 		<div id="subscription_progress" class="progress progress-striped active">
 			<div id="subscription_progress_bar" class="bar"></div>
