--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/feed/root_layout.css" />
     <link rel="stylesheet" href="/static/feed/subscription.css" />
     <link rel="stylesheet" href="/static/feed/add_subscription.css" />
+    <link rel="stylesheet" href="/static/feed/share.css" />
 </head>
 
 <body>
@@ -72,16 +73,6 @@
 		</div>
 	</div>
 	<div id="subscription_main">
-		<h1 id="subscription_main_title">
-			<a id="subscription_main_title_link" href="#" target="_blank"></a>
-			<div class="sub">
-				<i class="icon-refresh alpha_low"></i>
-				<span id="subscription_main_title_sub"></span>
-				<a id="subscription_main_title_icon_a" href="#" target="_blank">
-					<i class="icon-chevron-right link_icon"></i>
-				</a>
-			</div>
-		</h1>
 		<table id="subscription_list_item_table" class="table"></table>
 		<div id="subscription_progress" class="progress progress-striped active">
 			<div id="subscription_progress_bar" class="bar"></div>
