--- a/src/static/feed/subscription.css
+++ b/src/static/feed/subscription.css
@@ -56,7 +56,7 @@ img.subscription_share_btn {
 
 td.subscription_last_poll,
 td.subscription_item_published {
-	white-space: nowrap;
+	text-align: right;
 	color: #b2b2b2;
 }
 
@@ -77,6 +77,14 @@ td.subscription_item_brief_title {
 	border: 0px none;	
 }
 
-.subscription_item {
-	display: none;
+.nowrap {
+	white-space: nowrap;
+}
+
+.no_padding_right {
+	padding-right: 0px !important;
+}
+
+.subscription_item i {
+	margin-top : 3px;
 }
