--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -10,22 +10,10 @@
     <link rel="stylesheet" href="/static/feed/subscription.css" />
     <link rel="stylesheet" href="/static/feed/add_subscription.css" />
     <link rel="stylesheet" href="/static/feed/share.css" />
+    <script data-main="/static/feed/main.js" src="/static/requirejs/require.js"></script>
 </head>
 
 <body>
-
-<script src="/static/jquery/jquery-1.9.1.js"></script>
-<script src="/static/bootstrap/js/bootstrap.js"></script>
-<script src="/static/cookie/jquery.cookie.js"></script>
-<script src="/static/json/json2.js"></script>
-<script src="/static/feed/utils.js"></script>
-<script src="/static/feed/root_layout.js"></script>
-<script src="/static/feed/add_subscription.js"></script>
-<script src="/static/feed/list_subscription.js"></script>
-<script src="/static/feed/subscription.js"></script>
-<script src="/static/feed/share.js"></script>
-<script src="/feed/cmd.js"></script>
-<script src="/static/feed/main.js"></script>
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
