disable subscription data on load #35

--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div id="list_subscription_area">
+<div id="list_subscription_area" class="listarea">
 	<div id="list_subscription_menu">
 		<div class="menu_padding">
 			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i> Add</a>
