--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/feed/subscription.css" />
     <link rel="stylesheet" href="/static/feed/add_subscription.css" />
     <link rel="stylesheet" href="/static/feed/share.css" />
-    <script data-main="/static/feed/main.js" src="/static/requirejs/require.js"></script>
+    <script data-main="/static/main/main.js" src="/static/requirejs/require.js"></script>
 </head>
 
 <body>
