--- a/src/static/feed/root_layout.css
+++ b/src/static/feed/root_layout.css
@@ -17,6 +17,16 @@ div#subscription_main {
 	display: none;
 }
 
+.app {
+	position: absolute;
+	display: none;
+	margin: 0; padding: 0;
+}
+
+.phibox {
+	position: absolute;
+}
+
 /* /////////////////// */
 
 body {
