--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -16,8 +16,12 @@
 <body>
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
+  <div id="header-navbar" class="navbar-inner">
 	<a class="brand" href="#">MomohaFeed</a>
+	<ul class="nav pull-right">
+		<li><a class="auth" id="header_auth_chpwd"  href="#" style="display: none;">Change password</a></li>
+		<li><a class="auth" id="header_auth_logout" href="#" style="display: none;">Logout</a></li>
+	</ul>
   </div>
 </div>
 
