--- a/src/static/feed/root_layout.css
+++ b/src/static/feed/root_layout.css
@@ -39,10 +39,10 @@ div#header {
 	overflow: hidden;
 }
 
-	div#header a.brand {
-		margin-left: 0;
+	div#header-navbar {
+		padding-left: 20px;
+		padding-right: 20px;
 	}
-
 
 div#list_subscription_area {
 	overflow: hidden;
