--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -19,8 +19,8 @@
   <div id="header-navbar" class="navbar-inner">
 	<a class="brand" href="#">MomohaFeed</a>
 	<ul class="nav pull-right">
-		<li><a class="auth" id="header_auth_chpwd"  href="#" style="display: none;">Change password</a></li>
-		<li><a class="auth" id="header_auth_logout" href="#" style="display: none;">Logout</a></li>
+		<li><a class="auth" id="header_auth_chpwd"  style="display: none;" href="#">Change password</a></li>
+		<li><a class="auth" id="header_auth_logout" style="display: none;" href="#">Logout</a></li>
 	</ul>
   </div>
 </div>
@@ -28,7 +28,7 @@
 <div id="list_subscription_area" class="listarea">
 	<div id="list_subscription_menu">
 		<div class="menu_padding">
-			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i> Add</a>
+			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn"><i class="icon-plus"></i> Add</a>
 		</div>
 	</div>
 	<div id="list_subscription_main">
