--- a/src/template/MomohaFeed/index.html
+++ b/src/template/MomohaFeed/index.html
@@ -17,7 +17,7 @@
 
 <div id="header" class="navbar navbar-inverse navbar-fixed-top">
   <div id="header-navbar" class="navbar-inner">
-	<a class="brand" href="#">MomohaFeed</a>
+	<span class="brand">MomohaWeb</span>
 	<ul class="nav pull-right">
 		<li><a class="auth" id="header_auth_chpwd"  style="display: none;" href="#">Change password</a></li>
 		<li><a class="auth" id="header_auth_logout" style="display: none;" href="#">Logout</a></li>
