--- a/src/static/inc/feed/subscription.css
+++ b/src/static/inc/feed/subscription.css
@@ -7,6 +7,7 @@ img.subscription_share_btn {
 	background-color: #EEEEEE;
 }
 
+#list_subscription_menu_toolbar,
 #subscription_menu_toolbar{
 	margin: 0px;
 	padding: 0px;
